--- a/app/views/shared/_support_modal.html.erb
+++ b/app/views/shared/_support_modal.html.erb
@@ -8,7 +8,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <%= t('.body_html', app: t('home.index.app_name')) %>
+        <%= t('.body_html', app: t('app_name')) %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal"><%= t('.negative') %></button>
