--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -1,5 +1,5 @@
 <div id="search-response-user-template" style="display: none;">
-  <div class="border rounded mb-3 pt-3 px-3">
+  <div class="border rounded mb-3 pt-3 px-3" style="position: relative;">
     <div class="d-flex mb-3">
       <div class="mr-3">
         <a href="https://twitter.com/{{screen_name}}" target="_blank">
@@ -52,6 +52,7 @@
         </div>
       </div>
     </div>
+
+    <div style="position: absolute; right: 8px; bottom: 4px; color: lightgray;">{{index_number}}</div>
   </div>
-</div>
 </div>
