--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,7 +1,7 @@
 <div class="new-age-container">
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: white;">
     <div class="container border-bottom">
-      <a class="navbar-brand" style="color: #222;" href="#" data-toggle="modal" data-target="#support-modal"><%= t('home.index.app_name') %></a>
+      <a class="navbar-brand" style="color: #222;" href="#" data-toggle="modal" data-target="#support-modal"><%= t('app_name') %></a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" style="color: #222; text-transform: none;" href="#" data-toggle="modal" data-target="#support-modal">
@@ -31,7 +31,7 @@
 <div class="new-age-container">
   <footer>
     <div class="container">
-      <p>&copy; <%= t('home.index.app_name') %> 2020. All Rights Reserved.</p>
+      <p>&copy; <%= t('app_name') %> 2020. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
           <a href="#">Privacy</a>
