Add japan, kanto and tokyo to location options

--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -21,7 +21,7 @@
   <div class="mb-5">
     <div class="mb-2">
       <%= t('.search_type.title') %>
-      <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_category.tooltip') %>"></i>
+      <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_type.tooltip') %>"></i>
     </div>
 
     <div class="mb-1">
