--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -89,7 +89,8 @@
     var lastUid;
     var currentIndexNumber;
     var i18n = {
-      specify_correct_label: '<%= t('.js.specify_correct_label') %>'
+      specify_correct_label: '<%= t('.js.specify_correct_label') %>',
+      no_results_found: '<%= t('.js.no_results_found_html', app: t('app_name')) %>'
     };
 
     function resetSearchState(reason) {
@@ -215,7 +216,7 @@
           // Do nothing
         } else {
           resetSearchState('no results found');
-          $('#search-response').empty().text('No results found').hide().fadeIn(500);
+          $('#search-response').empty().html(i18n['no_results_found']).hide().fadeIn(500);
         }
       } else {
         var container = $('<div/>', {style: 'display: none;'});
