--- a/app/views/shared/_support_modal.html.erb
+++ b/app/views/shared/_support_modal.html.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal"><%= t('.negative') %></button>
-        <button type="button" class="btn btn-primary" onclick="window.location.href = '<%= root_path(via: 'support_modal') %>;'"><%= t('.positive') %></button>
+        <button type="button" class="btn btn-primary" onclick="window.location.href = '<%= root_path(via: 'support_modal') %>'"><%= t('.positive') %></button>
       </div>
     </div>
   </div>
