--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,7 @@
     </div>
   </header>
 
-  <section class="download bg-primary text-center" id="download">
+  <section class="download bg-primary text-center">
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
@@ -60,6 +60,31 @@
             <div class="mb-2"><%= t('.download.features.location') %></div>
             <div class="mb-2"><%= t('.download.features.url') %></div>
             <div class="mb-2"><%= t('.download.features.keyword') %></div>
+          </div>
+          <div class="badges" style="display: none;">
+            <a class="badge-link" href="#"><img src="<%= asset_path '/template/img/google-play-badge.svg' %>" alt=""></a>
+            <a class="badge-link" href="#"><img src="<%= asset_path '/template/img/app-store-badge.svg' %>" alt=""></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="download2 bg-primary text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 mx-auto">
+          <h2 class="section-heading mb-5"><%= t('.download2.title') %></h2>
+          <p class="mb-5"><%= t('.download2.text_html') %></p>
+          <div class="mb-5">
+            <a href="<%= raw user_twitter_omniauth_authorize_path(via: 'download2') %>" class="btn btn-outline btn-xl"><%= t('.masthead.button') %></a>
+          </div>
+          <div>
+            <h3 class="mb-4"><%= t('.download2.features.what_app_can_do', app: t('app_name')) %></h3>
+            <div class="mb-2"><%= t('.download2.features.job') %></div>
+            <div class="mb-2"><%= t('.download2.features.location') %></div>
+            <div class="mb-2"><%= t('.download2.features.url') %></div>
+            <div class="mb-2"><%= t('.download2.features.keyword') %></div>
           </div>
           <div class="badges" style="display: none;">
             <a class="badge-link" href="#"><img src="<%= asset_path '/template/img/google-play-badge.svg' %>" alt=""></a>
@@ -100,14 +125,14 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-screen-smartphone text-primary"></i>
+                  <i class="icon-energy text-primary"></i>
                   <h3><%= t('.features.first.title') %></h3>
                   <p class="text-muted"><%= t('.features.first.text') %></p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-camera text-primary"></i>
+                  <i class="icon-location-pin text-primary"></i>
                   <h3><%= t('.features.second.title') %></h3>
                   <p class="text-muted"><%= t('.features.second.text') %></p>
                 </div>
@@ -116,14 +141,14 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-present text-primary"></i>
+                  <i class="icon-bulb text-primary"></i>
                   <h3><%= t('.features.third.title') %></h3>
                   <p class="text-muted"><%= t('.features.third.text') %></p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-lock-open text-primary"></i>
+                  <i class="icon-magic-wand text-primary"></i>
                   <h3><%= t('.features.fourth.title') %></h3>
                   <p class="text-muted"><%= t('.features.fourth.text') %></p>
                 </div>
@@ -164,10 +189,10 @@
       <p>&copy; <%= t('app_name') %> 2021. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
-          <a href="#">Privacy</a>
+          <a href="#" data-toggle="modal" data-target="#privacy-modal">Privacy</a>
         </li>
         <li class="list-inline-item">
-          <a href="#">Terms</a>
+          <a href="#" data-toggle="modal" data-target="#terms-modal">Terms</a>
         </li>
         <li class="list-inline-item">
           <a href="#">FAQ</a>
