--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,10 +4,10 @@
       <p>&copy; <%= t('app_name') %> 2021. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
-          <a href="#">Privacy</a>
+          <a href="#" data-toggle="modal" data-target="#privacy-modal">Privacy</a>
         </li>
         <li class="list-inline-item">
-          <a href="#">Terms</a>
+          <a href="#" data-toggle="modal" data-target="#terms-modal">Terms</a>
         </li>
         <li class="list-inline-item">
           <a href="#">FAQ</a>
