Add sign-out-modal and faq-modal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,9 @@
 
 <% if user_signed_in? %>
   <%= render partial: 'shared/support_modal' %>
+  <%= render partial: 'shared/sign_out_modal' %>
 <% end %>
+<%= render partial: 'shared/faq_modal' %>
 <%= render partial: 'shared/privacy_modal' %>
 <%= render partial: 'shared/terms_modal' %>
 </body>
