--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -183,35 +183,6 @@
       </ul>
     </div>
   </section>
-
-  <footer>
-    <div class="container">
-      <p>&copy; <%= t('app_name') %> 2021. All Rights Reserved.</p>
-      <ul class="list-inline">
-        <li class="list-inline-item">
-          <a href="#" data-toggle="modal" data-target="#privacy-modal">Privacy</a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#" data-toggle="modal" data-target="#terms-modal">Terms</a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#">FAQ</a>
-        </li>
-        <li class="list-inline-item">
-          <% if I18n.locale == :ja %>
-            <%= link_to t('.english', locale: :en), root_path(locale: 'en', via: 'footer') %>
-          <% else %>
-            <%= link_to t('.japanese', locale: :ja), root_path(locale: 'ja', via: 'footer') %>
-          <% end %>
-        </li>
-        <li class="list-inline-item">
-          <% if user_signed_in? %>
-            <%= link_to t('.sign_out'), destroy_user_session_path, data: { confirm: 'Do you want to sign out?', method: :delete } %>
-          <% else %>
-            <%= link_to t('.sign_in'), user_twitter_omniauth_authorize_path(via: 'footer') %>
-          <% end %>
-        </li>
-      </ul>
-    </div>
-  </footer>
 </div>
+
+<%= render partial: 'shared/footer' %>
