--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,18 +10,18 @@
           <a href="#" data-toggle="modal" data-target="#terms-modal">Terms</a>
         </li>
         <li class="list-inline-item">
-          <a href="#">FAQ</a>
+          <a href="#" data-toggle="modal" data-target="#faq-modal">FAQ</a>
         </li>
         <li class="list-inline-item">
           <% if I18n.locale == :ja %>
-            <%= link_to t('home.index.english', locale: :en), root_path(locale: 'en', via: 'footer') %>
+            <%= link_to t('home.index.english', locale: :en), root_path(locale: 'en', via: 'language') %>
           <% else %>
-            <%= link_to t('home.index.japanese', locale: :ja), root_path(locale: 'ja', via: 'footer') %>
+            <%= link_to t('home.index.japanese', locale: :ja), root_path(locale: 'ja', via: 'language') %>
           <% end %>
         </li>
         <li class="list-inline-item">
           <% if user_signed_in? %>
-            <%= link_to t('home.index.sign_out'), destroy_user_session_path, data: { confirm: 'Do you want to sign out?', method: :delete } %>
+            <a href="#" data-toggle="modal" data-target="#sign-out-modal"><%= t('home.index.sign_out') %></a>
           <% else %>
             <%= link_to t('home.index.sign_in'), user_twitter_omniauth_authorize_path %>
           <% end %>
