--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
   <%= render partial: 'shared/sign_out_modal' %>
 <% end %>
 <%= render partial: 'shared/faq_modal' %>
+<%= render partial: 'shared/report_modal' %>
 <%= render partial: 'shared/privacy_modal' %>
 <%= render partial: 'shared/terms_modal' %>
 </body>
