--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -11,7 +11,9 @@
           <strong>{{name}}</strong>
           <a class="text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name}}</a>
         </div>
-        <div><div class="small">{{{labels}}}</div></div>
+        <div>
+          <div class="small">{{{labels}}}</div>
+        </div>
       </div>
     </div>
 
@@ -53,6 +55,16 @@
       </div>
     </div>
 
+    <div class="dropdown" style="position: absolute; right: 10px; top: 8px;">
+      <div data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="text-muted fas fa-ellipsis-v" style="cursor: pointer;"></i>
+      </div>
+      <div class="dropdown-menu dropdown-menu-right">
+        <a class="dropdown-item" href="<%= egotter_url('{{screen_name}}') %>" target="_blank"><%= t('.egotter') %></a>
+        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#report-modal"><%= t('.error_report') %></a>
+        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#report-modal"><%= t('.bug_report') %></a>
+      </div>
+    </div>
     <div style="position: absolute; right: 8px; bottom: 4px; color: lightgray;">{{index_number}}</div>
   </div>
 </div>
