Rename to DashboardController

--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -57,7 +57,7 @@
 
     <div class="dropdown" style="position: absolute; right: 10px; top: 8px;">
       <div data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <i class="text-muted fas fa-ellipsis-v" style="cursor: pointer;"></i>
+        <i class="text-muted fas fa-ellipsis-h" style="cursor: pointer;"></i>
       </div>
       <div class="dropdown-menu dropdown-menu-right">
         <a class="dropdown-item" href="<%= egotter_url('{{screen_name}}') %>" target="_blank"><%= t('.egotter') %></a>
