--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -1,43 +1,47 @@
-<div class="d-flex flex-wrap">
-  <%# Search category %>
-  <div class="mr-5 mb-5">
-    <div class="mb-2">
-      <%= t('.search_category.title') %>
-      <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_category.tooltip') %>"></i>
-    </div>
-
-    <div class="mb-1">
-      <div id="search-category-buttons" class="btn-group" role="group">
-        <button type="button" class="btn-friends btn btn-outline-secondary" data-value="friends"><%= t('.search_category.friends.label') %></button>
-        <button type="button" class="btn-followers btn btn-primary" data-value="followers"><%= t('.search_category.followers.label') %></button>
-      </div>
-    </div>
-
-    <div class="friends-selected-text small text-muted" style="display: none;"><%= t('.search_category.friends.help_html') %></div>
-    <div class="followers-selected-text small text-muted"><%= t('.search_category.followers.help_html') %></div>
+<%# Search category %>
+<div class="mr-5 mb-5">
+  <div class="mb-2">
+    <%= t('.search_category.title') %>
+    <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_category.tooltip') %>"></i>
   </div>
 
-  <%# Search type %>
-  <div class="mb-5">
-    <div class="mb-2">
-      <%= t('.search_type.title') %>
-      <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_type.tooltip') %>"></i>
+  <div class="mb-1">
+    <div id="search-category-buttons" class="btn-group" role="group">
+      <button type="button" class="btn-friends btn btn-outline-secondary" data-value="friends"><%= t('.search_category.friends.label') %></button>
+      <button type="button" class="btn-followers btn btn-primary" data-value="followers"><%= t('.search_category.followers.label') %></button>
+      <button type="button" class="btn-one-sided-friends btn btn-outline-secondary" data-value="one_sided_friends"><%= t('.search_category.one_sided_friends.label') %></button>
+      <button type="button" class="btn-one-sided-followers btn btn-outline-secondary" data-value="one_sided_followers"><%= t('.search_category.one_sided_followers.label') %></button>
+      <button type="button" class="btn-mutual-friends btn btn-outline-secondary" data-value="mutual_friends"><%= t('.search_category.mutual_friends.label') %></button>
     </div>
-
-    <div class="mb-1">
-      <div id="search-type-buttons" class="btn-group" role="group">
-        <button type="button" class="btn-job btn btn-primary" data-value="job"><%= t('.search_type.job') %></button>
-        <button type="button" class="btn-location btn btn-outline-secondary" data-value="location"><%= t('.search_type.location') %></button>
-        <button type="button" class="btn-url btn btn-outline-secondary" data-value="url"><%= t('.search_type.url') %></button>
-        <button type="button" class="btn-keyword btn btn-outline-secondary" data-value="keyword"><%= t('.search_type.keyword') %></button>
-      </div>
-    </div>
-
-    <div class="job-selected-text small text-muted"><%= t('.search_type.job_help_html') %></div>
-    <div class="location-selected-text small text-muted" style="display: none;"><%= t('.search_type.location_help_html') %></div>
-    <div class="url-selected-text small text-muted" style="display: none;"><%= t('.search_type.url_help_html') %></div>
-    <div class="keyword-selected-text small text-muted" style="display: none;"><%= t('.search_type.keyword_help_html') %></div>
   </div>
+
+  <div class="friends-selected-text small text-muted" style="display: none;"><%= t('.search_category.friends.help_html') %></div>
+  <div class="followers-selected-text small text-muted"><%= t('.search_category.followers.help_html') %></div>
+  <div class="one-sided-friends-selected-text small text-muted" style="display: none;"><%= t('.search_category.one_sided_friends.help_html') %></div>
+  <div class="one-sided-followers-selected-text small text-muted" style="display: none;"><%= t('.search_category.one_sided_followers.help_html') %></div>
+  <div class="mutual-friends-selected-text small text-muted" style="display: none;"><%= t('.search_category.mutual_friends.help_html') %></div>
+</div>
+
+<%# Search type %>
+<div class="mb-5">
+  <div class="mb-2">
+    <%= t('.search_type.title') %>
+    <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_type.tooltip') %>"></i>
+  </div>
+
+  <div class="mb-1">
+    <div id="search-type-buttons" class="btn-group" role="group">
+      <button type="button" class="btn-job btn btn-primary" data-value="job"><%= t('.search_type.job') %></button>
+      <button type="button" class="btn-location btn btn-outline-secondary" data-value="location"><%= t('.search_type.location') %></button>
+      <button type="button" class="btn-url btn btn-outline-secondary" data-value="url"><%= t('.search_type.url') %></button>
+      <button type="button" class="btn-keyword btn btn-outline-secondary" data-value="keyword"><%= t('.search_type.keyword') %></button>
+    </div>
+  </div>
+
+  <div class="job-selected-text small text-muted"><%= t('.search_type.job_help_html') %></div>
+  <div class="location-selected-text small text-muted" style="display: none;"><%= t('.search_type.location_help_html') %></div>
+  <div class="url-selected-text small text-muted" style="display: none;"><%= t('.search_type.url_help_html') %></div>
+  <div class="keyword-selected-text small text-muted" style="display: none;"><%= t('.search_type.keyword_help_html') %></div>
 </div>
 
 <%# Search label %>
@@ -81,6 +85,9 @@
   $(function () {
     var friendsButton = $('.btn-friends');
     var followersButton = $('.btn-followers');
+    var oneSidedFriendsButton = $('.btn-one-sided-friends');
+    var oneSidedFollowersButton = $('.btn-one-sided-followers');
+    var mutualFriendsButton = $('.btn-mutual-friends');
     var jobButton = $('.btn-job');
     var locationButton = $('.btn-location');
     var urlButton = $('.btn-url');
@@ -115,15 +122,60 @@
       labelSelector.val('');
 
       if ($(this).hasClass('btn-friends')) {
-        deactivateButton(followersButton);
         activateButton(friendsButton);
+        deactivateButton(followersButton);
+        deactivateButton(oneSidedFriendsButton);
+        deactivateButton(oneSidedFollowersButton);
+        deactivateButton(mutualFriendsButton);
         $('.friends-selected-text').hide().fadeIn(500);
         $('.followers-selected-text').hide();
+        $('.one-sided-friends-selected-text').hide();
+        $('.one-sided-followers-selected-text').hide();
+        $('.mutual-friends-selected-text').hide();
       } else if ($(this).hasClass('btn-followers')) {
         deactivateButton(friendsButton);
         activateButton(followersButton);
+        deactivateButton(oneSidedFriendsButton);
+        deactivateButton(oneSidedFollowersButton);
+        deactivateButton(mutualFriendsButton);
         $('.friends-selected-text').hide();
         $('.followers-selected-text').hide().fadeIn(500);
+        $('.one-sided-friends-selected-text').hide();
+        $('.one-sided-followers-selected-text').hide();
+        $('.mutual-friends-selected-text').hide();
+      } else if ($(this).hasClass('btn-one-sided-friends')) {
+        deactivateButton(friendsButton);
+        deactivateButton(followersButton);
+        activateButton(oneSidedFriendsButton);
+        deactivateButton(oneSidedFollowersButton);
+        deactivateButton(mutualFriendsButton);
+        $('.friends-selected-text').hide();
+        $('.followers-selected-text').hide();
+        $('.one-sided-friends-selected-text').hide().fadeIn(500);
+        $('.one-sided-followers-selected-text').hide();
+        $('.mutual-friends-selected-text').hide();
+      } else if ($(this).hasClass('btn-one-sided-followers')) {
+        deactivateButton(friendsButton);
+        deactivateButton(followersButton);
+        deactivateButton(oneSidedFriendsButton);
+        activateButton(oneSidedFollowersButton);
+        deactivateButton(mutualFriendsButton);
+        $('.friends-selected-text').hide();
+        $('.followers-selected-text').hide();
+        $('.one-sided-friends-selected-text').hide();
+        $('.one-sided-followers-selected-text').hide().fadeIn(500);
+        $('.mutual-friends-selected-text').hide();
+      } else if ($(this).hasClass('btn-mutual-friends')) {
+        deactivateButton(friendsButton);
+        deactivateButton(followersButton);
+        deactivateButton(oneSidedFriendsButton);
+        deactivateButton(oneSidedFollowersButton);
+        activateButton(mutualFriendsButton);
+        $('.friends-selected-text').hide();
+        $('.followers-selected-text').hide();
+        $('.one-sided-friends-selected-text').hide();
+        $('.one-sided-followers-selected-text').hide();
+        $('.mutual-friends-selected-text').hide().fadeIn(500);
       }
     }
 
@@ -182,6 +234,9 @@
 
     friendsButton.on('click', switchCategoryButton);
     followersButton.on('click', switchCategoryButton);
+    oneSidedFriendsButton.on('click', switchCategoryButton);
+    oneSidedFollowersButton.on('click', switchCategoryButton);
+    mutualFriendsButton.on('click', switchCategoryButton);
     jobButton.on('click', switchTypeButton);
     locationButton.on('click', switchTypeButton);
     urlButton.on('click', switchTypeButton);
@@ -263,22 +318,22 @@
       var label = currentLabel();
       var limit = 10;
 
-      if (category !== 'friends' && category !== 'followers') {
-        console.warn('Invalid category');
+      if (category !== 'friends' && category !== 'followers' && category !== 'one_sided_friends' && category !== 'one_sided_followers' && category !== 'mutual_friends') {
+        console.warn('Invalid category', category);
         resetSearchState('Invalid category');
         $('#search-response').empty().text('Please specify correct [category]').hide().fadeIn(500);
         return
       }
 
       if (type !== 'job' && type !== 'location' && type !== 'url' && type !== 'keyword') {
-        console.warn('Invalid type');
+        console.warn('Invalid type', type);
         resetSearchState('Invalid type');
         $('#search-response').empty().text('Please specify correct [type]').hide().fadeIn(500);
         return
       }
 
       if (!label || label.length === 0) {
-        console.warn('Invalid label');
+        console.warn('Invalid label', label);
         resetSearchState('Invalid label');
         $('#search-response').empty().text(i18n['specify_correct_label']).hide().fadeIn(500);
         labelSelector.addClass('is-invalid');
